--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "# Get this from the \"Manage App\" page. Make sure you set them\n",
     "# back to None before pushing this to GitHub, since otherwise\n",
     "# your credentials will be compromised\n",
-    "api_key =(\"wb0wHd0E3iQVk2Zki2Y3oqp_-po6tuxWE0DBfro9J1g6XY9Uq5JgmQHvZo6wruk6yFcVD3DxbeFHYFYf85NqrREDavo_Q5sbVAr3pJNbUGVEhErRcQv3Yz5RU2h7YnYx\")\n",
+    "api_key =None\n",
     "# These can be whatever you want! But the solution uses \"pizza\"\n",
     "# and \"New York NY\" if you want to compare your work directly\n",
     "term = \"pizza\"\n",
